--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3"
   }
